feat: add marker clustering using supercluster

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,8 @@ body {
 .leaflet-control-attribution {
   display: none;
 }
+
+.leaflet-div-icon {
+  background: none !important;
+  border: none !important;
+}
