--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
 @layer base {
   :root {
+    --color-background-base: 240 25% 98%; /* White */
+    --color-background-input: 24 20% 95%; /* White, slightly darker */
+    --color-text-primary: 24 12% 8%; /* Black */
+    --color-text-placeholder: 26 17% 46%; /* Light Brown */
+    --color-action-primary: 24 91% 54%; /* Orange */
+    --color-indicator-info: 206 100% 67%; /* Blue */
+    --color-indicator-active: 13 93% 54%; /* Red */
+
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
+    --card-foreground: var(--color-text-primary);
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: var(--color-text-primary);
+    --primary-foreground: var(--color-text-primary);
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
+    --muted-foreground: var(--color-text-placeholder);
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
@@ -33,8 +43,8 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-background: var(--color-background-base);
+    --sidebar-foreground: var(--color-text-primary);
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
     --sidebar-accent: 240 4.8% 95.9%;
@@ -112,4 +122,8 @@ body {
 
 .leaflet-popup-content {
   margin: 13px 40px 13px 40px !important;
+}
+
+.leaflet-container {
+  font-family: Inter, Arial, Helvetica, sans-serif !important;
 }
