--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,22 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: 12px;
+  @screen sm {
+    font-size: 13px;
+  }
+  @screen md {
+    font-size: 14px;
+  }
+  @screen lg {
+    font-size: 15px;
+  }
+  @screen xl {
+    font-size: 16px;
+  }
+}
+
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
 }
